# vcu-devkit

./: .gitignore  IMPROVEMENT_PLAN.md  README.md  _test.dbc  _test_can.dbc  build.py  cli.py  main.py  pyproject.toml  requirements.txt  vcu_devkit.spec  启动VCU-DevKit.bat
.github/workflows/: ci.yml  release.yml
config/: settings.py
core/: batch.py
core/commands/: __init__.py  command.py
core/db/: crud_mixin.py  manager.py  models.py
core/diff/: dbc_diff.py
core/generators/: a2l_generator.py  arxml_generator.py  base.py  c_generator.py  capl_generator.py  dcm_generator.py  j1939_c_generator.py  report_generator.py  rte_generator.py
core/parsers/: a2l_parser.py  arxml_parser.py  base.py  dbc_parser.py  dcm_parser.py  j1939_diag.py  j1939_parser.py  j1939_tp.py  odx_parser.py
core/plugins/: __init__.py  base.py  registry.py
core/protocols/: ccp.py  xcp.py  xcp_codec.py  xcp_mapping.py  xcp_session.py
core/rules/: engine.py
core/utils/: excel_utils.py
docs/: quickstart.md
docs/modules/: calib_manager.md  can_builder.md  diag_builder.md  swc_designer.md  test_generator.md  trace_matrix.md
md/: VCU_DevKit_Proposal.md  VCU_DevKit_Technical_Design.md
modules/calib_manager/: controller.py
modules/can_builder/: controller.py
modules/diag_builder/: controller.py
modules/swc_designer/: controller.py
modules/test_generator/: controller.py
modules/trace_matrix/: controller.py
plugins/: example_csv_parser.py
tests/: conftest.py  test_batch.py  test_calib_import.py  test_full_coverage.py
ui/: icons.py  main_window.py  sidebar.py
(+50 files in other folders)
