[project]
name = "vcu-devkit"
version = "0.1.0"
description = "VCU Software Development Assistant Toolkit"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "lxml>=5.1.0",
    "Jinja2>=3.1.3",
    "cantools>=39.4.0",
    "peewee>=3.17.0",
    "openpyxl>=3.1.2",
    "rich>=13.7.0",
]

[project.scripts]
vcu-devkit = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
